--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
                 </div>
                <h1 class="card-body-title3">
-                Charizard Nombre
-                <span>#N°</span>
+                Charizard rodrigo  <!-- mi nombre-->>
+                <span>#N°2</span>
                </h1>
                <p class="card-body-text3">
                 Edición Limitada
