--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
                 </div>
                <h1 class="card-body-title">
-                Charizard Nombre
-                <span>#N°</span>
+                Charizard Tatiana
+                <span>#03</span>
                </h1>
                <p class="card-body-text">
                 Edición Limitada
@@ -136,5 +136,6 @@
         </article>
         
     </main>
+
 </body>
 </html>
